--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -7,9 +7,8 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/unit.yml'
-      - 'plugins/**'
-      - 'tests/unit/**'
+      - "plugins/**"
+      - "tests/unit/**"
   workflow_call:
   workflow_dispatch:
 
