--- a/tests/integration/targets/reserved_ip/defaults/main.yml
+++ b/tests/integration/targets/reserved_ip/defaults/main.yml
@@ -1,9 +1,11 @@
 # Copyright (c) 2021, René Moser <mail@renemoser.net>
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
-vultr_reserved_ip_name: "{{ vultr_resource_prefix }}-ip"
+vultr_reserved_ip_name: "{{ vultr_resource_prefix }}_reserved_ip"
+vultr_reserved_ip_region: ams
 
-# TODO: topic of changes
-vultr_server_name: "{{ vultr_resource_prefix }}_vm"
-vultr_server_os: CentOS 7 x64
-vultr_server_plan: 1024 MB RAM,25 GB SSD,1.00 TB BW
+vultr_instance:
+  label: "{{ vultr_resource_prefix }}_reserved_ip"
+  plan: vc2-1c-1gb
+  region: "{{ vultr_reserved_ip_region }}"
+  os: Debian 12 x64 (bookworm)
