--- a/tests/integration/targets/block_storage_info/tasks/tests.yml
+++ b/tests/integration/targets/block_storage_info/tasks/tests.yml
@@ -19,7 +19,7 @@
 - name: verify test gather vultr block storage volume info in check mode
   ansible.builtin.assert:
     that:
-      - result.vultr_block_storage_info|selectattr('label','equalto','{{ vultr_block_storage_name }}') | list | count == 1
+      - result.vultr_block_storage_info|selectattr('label','equalto',vultr_block_storage_name) | list | count == 1
 
 - name: test gather vultr block storage volume info
   vultr.cloud.block_storage_info:
@@ -28,7 +28,7 @@
 - name: verify test gather vultr block storage volume info
   ansible.builtin.assert:
     that:
-      - result.vultr_block_storage_info|selectattr('label','equalto','{{ vultr_block_storage_name }}') | list | count == 1
+      - result.vultr_block_storage_info|selectattr('label','equalto',vultr_block_storage_name) | list | count == 1
 
 - name: Delete the block storage volume
   vultr.cloud.block_storage:
