--- a/tests/integration/targets/dns_record/tasks/create_record.yml
+++ b/tests/integration/targets/dns_record/tasks/create_record.yml
@@ -36,11 +36,11 @@
   ansible.builtin.assert:
     that:
       - result is changed
-      - result.vultr_dns_record.data == "{{ item.data }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
-      - result.vultr_dns_record.priority == {{ item.priority | default(-1) }}
+      - result.vultr_dns_record.data == item.data
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.ttl == item.ttl | default(300)
+      - result.vultr_dns_record.priority == item.priority | default(-1)
 
 - name: test create a dns record idempotence
   vultr.cloud.dns_record:
@@ -55,8 +55,8 @@
   ansible.builtin.assert:
     that:
       - result is not changed
-      - result.vultr_dns_record.data == "{{ item.data }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
-      - result.vultr_dns_record.priority == {{ item.priority | default(-1) }}
+      - result.vultr_dns_record.data == item.data
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.ttl == item.ttl | default(300)
+      - result.vultr_dns_record.priority == item.priority | default(-1)
