--- a/tests/integration/targets/dns_record/tasks/remove_record.yml
+++ b/tests/integration/targets/dns_record/tasks/remove_record.yml
@@ -15,11 +15,11 @@
   ansible.builtin.assert:
     that:
       - result is changed
-      - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
-      - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(-1)) }}
+      - result.vultr_dns_record.data == item.update_data | default(item.data)
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.ttl == item.update_ttl | default(300)
+      - result.vultr_dns_record.priority == item.update_priority | default(item.priority | default(-1))
 
 - name: test remove second dns record in check mode
   vultr.cloud.dns_record:
@@ -36,11 +36,11 @@
   ansible.builtin.assert:
     that:
       - result is changed
-      - result.vultr_dns_record.data == "{{ item.data | default(item.data) }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
-      - result.vultr_dns_record.priority == {{ item.priority | default(-1) }}
+      - result.vultr_dns_record.data == item.data | default(item.data)
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.ttl == item.ttl | default(300)
+      - result.vultr_dns_record.priority == item.priority | default(-1)
   when: item.multiple is defined and item.multiple == true
 
 - name: test remove a dns record
@@ -56,11 +56,11 @@
   ansible.builtin.assert:
     that:
       - result is changed
-      - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
-      - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(-1)) }}
+      - result.vultr_dns_record.data == item.update_data | default(item.data)
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.ttl == item.update_ttl | default(300)
+      - result.vultr_dns_record.priority == item.update_priority | default(item.priority | default(-1))
 
 - name: test remove second dns record
   vultr.cloud.dns_record:
@@ -76,11 +76,11 @@
   ansible.builtin.assert:
     that:
       - result is changed
-      - result.vultr_dns_record.data == "{{ item.data }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
-      - result.vultr_dns_record.priority == {{ item.priority | default(-1) }}
+      - result.vultr_dns_record.data == item.data
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.ttl == item.ttl | default(300)
+      - result.vultr_dns_record.priority == item.priority | default(-1)
   when: item.multiple is defined and item.multiple == true
 
 - name: test remove a dns record idempotence
