--- a/tests/integration/targets/dns_record/tasks/update_record.yml
+++ b/tests/integration/targets/dns_record/tasks/update_record.yml
@@ -16,11 +16,11 @@
   ansible.builtin.assert:
     that:
       - result is changed
-      - result.vultr_dns_record.data == "{{ item.data }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
-      - result.vultr_dns_record.priority == {{ item.priority | default(-1) }}
+      - result.vultr_dns_record.data == item.data
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.ttl == item.ttl | default(300)
+      - result.vultr_dns_record.priority == item.priority | default(-1)
   when: item.multiple is undefined or item.multiple == false
 - name: verify test add another dns record in check mode
   ansible.builtin.assert:
@@ -43,11 +43,11 @@
   ansible.builtin.assert:
     that:
       - result is changed
-      - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.priority == {{ item.update_priority | default(-1) }}
+      - result.vultr_dns_record.data == item.update_data | default(item.data)
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.ttl == item.update_ttl | default(300)
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.priority == item.update_priority | default(-1)
 
 - name: test update or add another dns record idempotence
   vultr.cloud.dns_record:
@@ -63,8 +63,8 @@
   ansible.builtin.assert:
     that:
       - result is not changed
-      - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
-      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-      - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
-      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-      - result.vultr_dns_record.priority == {{ item.update_priority | default(-1) }}
+      - result.vultr_dns_record.data == item.update_data | default(item.data)
+      - result.vultr_dns_record.name == item.name | default('')
+      - result.vultr_dns_record.ttl == item.update_ttl | default(300)
+      - result.vultr_dns_record.type == item.record_type | default('A')
+      - result.vultr_dns_record.priority == item.update_priority | default(-1)
