--- a/tests/integration/targets/firewall_group_info/tasks/tests.yml
+++ b/tests/integration/targets/firewall_group_info/tasks/tests.yml
@@ -17,7 +17,7 @@
 - name: verify test gather vultr firewall group info in check mode
   ansible.builtin.assert:
     that:
-      - result.vultr_firewall_group_info|selectattr('description','equalto','{{ firewall_group_name }}') | list | count == 1
+      - result.vultr_firewall_group_info|selectattr('description','equalto',firewall_group_name) | list | count == 1
 
 - name: test gather vultr firewall group info
   vultr.cloud.firewall_group_info:
@@ -26,7 +26,7 @@
 - name: verify test gather vultr firewall group info
   ansible.builtin.assert:
     that:
-      - result.vultr_firewall_group_info|selectattr('description','equalto','{{ firewall_group_name }}') | list | count == 1
+      - result.vultr_firewall_group_info|selectattr('description','equalto',firewall_group_name) | list | count == 1
 
 - name: Delete the firewall group
   vultr.cloud.firewall_group:
