--- a/tests/integration/targets/firewall_rule/tasks/rule_absent.yml
+++ b/tests/integration/targets/firewall_rule/tasks/rule_absent.yml
@@ -19,11 +19,11 @@
     that:
       - result is changed
       - result.vultr_firewall_rule.action == "accept"
-      - result.vultr_firewall_rule.protocol == "{{ rule.protocol | default('tcp') }}"
-      - result.vultr_firewall_rule.port == "{{ rule.port_assert | default(rule.port | default('')) }}"
-      - result.vultr_firewall_rule.subnet == "{{ rule.subnet | default('') }}"
-      - result.vultr_firewall_rule.subnet_size == {{ rule.subnet_size | default(0) }}
-      - result.vultr_firewall_rule.ip_type == "{{ rule.ip_type | default('v4') }}"
+      - result.vultr_firewall_rule.protocol == rule.protocol | default('tcp')
+      - result.vultr_firewall_rule.port == rule.port_assert | default(rule.port | default(''))
+      - result.vultr_firewall_rule.subnet == rule.subnet | default('')
+      - result.vultr_firewall_rule.subnet_size == rule.subnet_size | default(0)
+      - result.vultr_firewall_rule.ip_type == rule.ip_type | default('v4')
 
 - name: test absent firewall rule
   vultr.cloud.firewall_rule:
@@ -40,11 +40,11 @@
     that:
       - result is changed
       - result.vultr_firewall_rule.action == "accept"
-      - result.vultr_firewall_rule.protocol == "{{ rule.protocol | default('tcp') }}"
-      - result.vultr_firewall_rule.port == "{{ rule.port_assert | default(rule.port | default('')) }}"
-      - result.vultr_firewall_rule.subnet == "{{ rule.subnet | default('') }}"
-      - result.vultr_firewall_rule.subnet_size == {{ rule.subnet_size | default(0) }}
-      - result.vultr_firewall_rule.ip_type == "{{ rule.ip_type | default('v4') }}"
+      - result.vultr_firewall_rule.protocol == rule.protocol | default('tcp')
+      - result.vultr_firewall_rule.port == rule.port_assert | default(rule.port | default(''))
+      - result.vultr_firewall_rule.subnet == rule.subnet | default('')
+      - result.vultr_firewall_rule.subnet_size == rule.subnet_size | default(0)
+      - result.vultr_firewall_rule.ip_type == rule.ip_type | default('v4')
 
 - name: test absent firewall rule idempotence
   vultr.cloud.firewall_rule:
