--- a/tests/integration/targets/vpc/defaults/main.yml
+++ b/tests/integration/targets/vpc/defaults/main.yml
@@ -3,3 +3,4 @@ vultr_vpc_description: "{{ vultr_resource_prefix }}_vpc"
 vultr_vpc_v4_subnet: 192.168.42.0
 vultr_vpc_v4_subnet_mask: 24
 vultr_vpc_region: ewr
+vultr_vpc_region_2: ams
