--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -116,6 +116,22 @@ releases:
     fragments:
     - fix-instance-state-wait-for.yml
     release_date: '2023-11-11'
+  1.11.0:
+    changes:
+      bugfixes:
+      - reserved_ip - Fixed an issue which caused the module to fail, also enabled
+        integration tests (https://github.com/vultr/ansible-collection-vultr/issues/92).
+      minor_changes:
+      - Implemented a feature to distinguish resources by region if available. This
+        allows to have identical name per region e.g. a VPC named ``default`` in each
+        region. (https://github.com/vultr/ansible-collection-vultr/pull/98).
+      - instance - Added a new param ``user_scheme`` to change user scheme to non-root
+        on Linux while creating the instance (https://github.com/vultr/ansible-collection-vultr/issues/96).
+    fragments:
+    - distinguish-per-region.yml
+    - instance-user-scheme.yml
+    - reserved_ip-fix-broken-module.yml
+    release_date: '2023-12-05'
   1.2.0:
     changes:
       minor_changes:
