--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -146,6 +146,17 @@ releases:
       name: object_storage
       namespace: ''
     release_date: '2023-12-18'
+  1.12.1:
+    changes:
+      bugfixes:
+      - Fixed an error while waiting for a specific state and the API returns an empty
+        response. (https://github.com/vultr/ansible-collection-vultr/issues/108).
+      - instance_info - Fixed the alias ``name`` being was used on the wrong argument.
+        (https://github.com/vultr/ansible-collection-vultr/issues/105).
+    fragments:
+    - fix-keyerror-wait-for-state.yml
+    - instance_info_fix-alias-for-label.yml
+    release_date: '2024-01-17'
   1.2.0:
     changes:
       minor_changes:
