test: instance: increase retries for state=absent

--- a/tests/integration/targets/instance/tasks/absent.yml
+++ b/tests/integration/targets/instance/tasks/absent.yml
@@ -20,6 +20,7 @@
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
     state: absent
+    api_retries: 20
   register: result
 - name: verify test absent instance
   ansible.builtin.assert:
