--- a/tests/integration/targets/instance/tasks/main.yml
+++ b/tests/integration/targets/instance/tasks/main.yml
@@ -14,3 +14,6 @@
     - ansible.builtin.import_role:
         name: cleanup
         tasks_from: cleanup_vpc
+    - ansible.builtin.import_role:
+        name: cleanup
+        tasks_from: cleanup_vpc2
