--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -157,6 +157,13 @@ releases:
     - fix-keyerror-wait-for-state.yml
     - instance_info_fix-alias-for-label.yml
     release_date: '2024-01-17'
+  1.13.0:
+    changes:
+      minor_changes:
+      - instance, bare_metal - Implemented a new option ``skip_wait`` (https://github.com/vultr/ansible-collection-vultr/issues/119).
+    fragments:
+    - instance-skip_wait.yml
+    release_date: '2024-05-31'
   1.2.0:
     changes:
       minor_changes:
