--- a/tests/integration/targets/object_storage_info/defaults/main.yml
+++ b/tests/integration/targets/object_storage_info/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 vultr_object_storage_info_stores:
-  - label: '{{ vultr_resource_prefix }}-object-storage-info1'
+  - label: "{{ vultr_resource_prefix }}-object-storage-info1"
     cluster: sjc1.vultrobjects.com
-  - label: '{{ vultr_resource_prefix }}-object-storage-info2'
+  - label: "{{ vultr_resource_prefix }}-object-storage-info2"
     cluster: sgp1.vultrobjects.com
